Cambio ruta imagenes

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ const discordAuthUrl = `https://discord.com/oauth2/authorize?client_id=${import.
     <!-- Izquierda: Logo y nombre del sitio -->
     <div class="flex items-center space-x-2">
       <img
-        src="/src/assets/logo.svg"
+        src="/logo.svg"
         alt="Logo"
         class="w-full h-24 -rotate-12"
       />
