--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -30,7 +30,7 @@
             onclick="window.open('${import.meta.env.PUBLIC_DISCORD_AUTH_URL}','popup','width=600,height=800'); return false;"
             class="bg-primary-dark text-white px-6 py-3 rounded-lg flex items-center hover:bg-primary-dark/90 transition-colors"
           >
-            <img src="/src/assets/icons/discord.svg" alt="Discord" class="w-8 h-8 mr-2" />
+            <img src="/discord.svg" alt="Discord" class="w-8 h-8 mr-2" />
             Agrega a tu discord
           </a>
         </div>
@@ -39,7 +39,7 @@
       <!-- Sección Derecha con imagen de fondo -->
       <div
         class="w-3/4 h-full bg-cover"
-        style="background-image: url('/src/assets/fondo.png'); background-position: 25% center;"
+        style="background-image: url('/fondo.png'); background-position: 25% center;"
       >
         <!-- Puedes agregar contenido adicional si lo deseas -->
       </div>
