Cambio boton agregar bot al servidor

--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -27,7 +27,7 @@
           </p>
           <a
             href="#"
-            onclick="window.open('${import.meta.env.PUBLIC_DISCORD_AUTH_URL}','popup','width=600,height=800'); return false;"
+            onclick="window.open('https://discord.com/oauth2/authorize?client_id=1342188880404811886','popup','width=600,height=800'); return false;"
             class="bg-primary-dark text-white px-6 py-3 rounded-lg flex items-center hover:bg-primary-dark/90 transition-colors"
           >
             <img src="/discord.svg" alt="Discord" class="w-8 h-8 mr-2" />
